external/opensocdebug/software/src/libosd/include/osd/packet.h

/**
 * @defgroup libosd-packet Packet
 * @ingroup libosd
 *
 * @{
 */

/**
 * A packet in the Open SoC Debug system
 */
// We must use zero-length data members (a GCC extension) instead of standard C
// flexible arrays (uint16_t payload[]) as flexible array members are not
// allowed in unions by the C standard.
struct osd_packet {
    uint16_t data_size_words;  //!< size of data/data_raw in uint16_t words
    union {
        struct {
            uint16_t dest;        //!< packet destination address
            uint16_t src;         //!< packet source address
            uint16_t flags;       //!< packet flags
            uint16_t payload[0];  //!< (size_data_words - 3) words of payload
        } data;

        uint16_t data_raw[0];  //!< data_size_words 16 bit words of data
    };
};
/**
 * Packet types
 */
enum osd_packet_type {
    OSD_PACKET_TYPE_REG = 0,    //< Register access
    OSD_PACKET_TYPE_RES1 = 1,   //< Reserved (will be discarded)
    OSD_PACKET_TYPE_EVENT = 2,  //< Debug Event
    OSD_PACKET_TYPE_RES2 = 3    //< Reserved (will be discarded)
};
/**
 * Allocate memory for a packet with given data size and zero all data fields
 *
 * The osd_packet.size field is set to the allocated size.
 *
 * @param[out] packet the packet to be allocated
 * @param[in]  size_data_words number of uint16_t words in the packet, including
 *             the header words.
 * @return the allocated packet, or NULL if allocation fails
 */
osd_result osd_packet_new(struct osd_packet **packet, size_t size_data_words);
/**
 * Free the memory associated with the packet and NULL the object
 */
void osd_packet_free(struct osd_packet **packet);
/**
 * Extract the DEST field out of a packet
 */
unsigned int osd_packet_get_dest(const struct osd_packet *packet);
/**
 * Extract the SRC field out of a packet
 */
unsigned int osd_packet_get_src(const struct osd_packet *packet);
/**
 * Extract the TYPE field out of a packet
 */
unsigned int osd_packet_get_type(const struct osd_packet *packet);
/**
 * Extract the TYPE_SUB field out of a packet
 */
unsigned int osd_packet_get_type_sub(const struct osd_packet *packet);
/**
 * Populate the header of a osd_packet
 *
 * @param packet
 * @param dest     packet destination
 * @param src      packet source
 * @param type     packet type
 * @param type_sub packet subtype
 *
 * @return OSD_OK on success, any other value indicates an error
 */
osd_result osd_packet_set_header(struct osd_packet *packet,
                                 const unsigned int dest,
                                 const unsigned int src,
                                 const enum osd_packet_type type,
                                 const unsigned int type_sub);
/**
 * Size in bytes of a packet
 */
size_t osd_packet_sizeof(const struct osd_packet *packet);
/**
 * Get the number of data words required for the given payload words
 *
 * Data words are the number of 16 bit words in a DI packet, including the
 * DI header. Payload words are the number of 16 bit words in a DI packet
 * excluding the header.
 */
unsigned int osd_packet_sizeconv_payload2data(unsigned int payload_words);
/**
 * Get the number of paylaod words required for the given data words
 *
 * Data words are the number of 16 bit words in a DI packet, including the
 * DI header. Payload words are the number of 16 bit words in a DI packet
 * excluding the header.
 */
unsigned int osd_packet_sizeconv_data2payload(unsigned int data_words);
/**
 * Dump the packet to a string (for human consumption)
 *
 * The string representation of a packet is for debugging purposes only and may
 * change at any time, do not rely on it for automated parsing.
 *
 * @see osd_packet_dump()
 */
void osd_packet_to_string(const struct osd_packet *packet, char **str);
/**
 * Check if two packets are equal
 */
bool osd_packet_equal(const struct osd_packet *p1, const struct osd_packet *p2);