external/opensocdebug/software/src/libosd/include/osd/osd.h

/**
 * @defgroup libosd-errorhandling Error handling
 * @ingroup libosd
 *
 * @{
 */

/** Standard return type */
typedef int osd_result;
/**@}*/ /* end of doxygen group libosd-errorhandling */


/**
 * @defgroup libosd-log Log
 * @ingroup libosd
 *
 * @{
 */

/**
 * Opaque logging context
 */
struct osd_log_ctx;
/**
 * Logging function template
 *
 * Implement a function with this signature and pass it to set_log_fn()
 * if you want to implement custom logging.
 */
typedef void (*osd_log_fn)(struct osd_log_ctx *ctx, int priority,
                           const char *file, int line, const char *fn,
                           const char *format, va_list args);
/**
 * Create a new instance of osd_log_ctx
 *
 * You may use the resulting log context on multiple threads.
 *
 * @param ctx the logging context
 * @param log_priority filter: only log messages greater or equal the given
 *                     priority. Use on the LOG_* constants in stdlog.h
 *                     Set to 0 to use the default logging priority.
 * @param log_fn logging callback. Set to NULL to disable logging output.
 *
 * @see osd_log_set_priority()
 * @see osd_log_set_fn()
 */
osd_result osd_log_new(struct osd_log_ctx **ctx, int log_priority,
                       osd_log_fn log_fn);
/**
 * Free and NULL an osd_log_ctx object
 *
 * @param ctx_p    the log context
 */
void osd_log_free(struct osd_log_ctx **ctx_p);
/**
 * Set logging function
 *
 * The built-in logging writes to STDERR. It can be overridden by a custom
 * function to log messages into the user's logging functionality.
 *
 * In many cases you want the log message to be associated with a context or
 * object of your application, i.e. the object that uses OSD. In this
 * case, set the context or <code>this</code> pointer with
 * osd_log_set_caller_ctx() and retrieve it inside your @p log_fn.
 *
 * An example in C++ could look like this:
 *
 * @rst
 *
 * .. code-block:: c
 *
 *   static void MyClass::osdLogCallback(struct osd_log_ctx *gctx,
 *                                       int priority, const char *file,
 *                                       int line, const char *fn,
 *                                       const char *format, va_list args)
 *   {
 *     MyClass *myclassptr = static_cast<MyClass*>(osd_get_caller_ctx(gctx));
 *     myclassptr->doLogging(format, args);
 *   }
 *
 *   MyClass::MyClass()
 *   {
 *     // ...
 *     osd_log_set_caller_ctx(gctx, this);
 *     osd_log_set_fn(&MyClass::osdLogCallback);
 *     // ...
 *   }
 *
 *   MyClass::doLogging(const char*   format, va_list args)
 *   {
 *      printf("this = %p", this);
 *      vprintf(format, args);
 *   }
 * @endrst
 *
 *
 * @param ctx    the log context
 * @param log_fn the used logging function
 */
void osd_log_set_fn(struct osd_log_ctx *ctx, osd_log_fn log_fn);
/**
 * Set a caller context pointer
 *
 * This library does not use this pointer in any way, you're free to set it to
 * whatever your application needs.
 *
 * @param ctx        the log context
 * @param caller_ctx the caller context pointer
 *
 * @see osd_log_get_caller_ctx()
 * @see osd_log_set_fn() for a code example using this functionality
 */
void osd_log_set_caller_ctx(struct osd_log_ctx *ctx, void *caller_ctx);
/**
 * Get the caller context pointer
 *
 * @param ctx the log context
 * @return the caller context pointer
 *
 * @see osd_log_set_caller_ctx()
 */
void *osd_log_get_caller_ctx(struct osd_log_ctx *ctx);
/**@}*/ /* end of doxygen group libosd-log */

/**
 * API version
 */
struct osd_version {
    /** major version */
    const uint16_t major;

    /** minor version */
    const uint16_t minor;

    /** micro version */
    const uint16_t micro;

    /**
     * suffix string, e.g. for release candidates ("-rc4") and development
     * versions ("-dev")
     */
    const char *suffix;
};
const struct osd_version *osd_version_get(void);